# faker_order_generator

./: README.md  pyproject.toml
faker_order_generator/: constants.py  main.py  order_data_source.py  products.json
